feat: implement function audioplay and function for audio performance of pianokeys

--- a/index.html
+++ b/index.html
@@ -41,19 +41,8 @@
         <div class="piano-key sharp" data-letter="O" data-note="a♯"></div>
       </div>
     </div>
-    <div class="audio">
-      <audio src="assets/audio/a.mp3"></audio>
-      <audio src="assets/audio/a♯.mp3"></audio>
-      <audio src="assets/audio/b.mp3"></audio>
-      <audio src="assets/audio/c.mp3"></audio>
-      <audio src="assets/audio/c♯.mp3"></audio>
-      <audio src="assets/audio/d.mp3"></audio>
-      <audio src="assets/audio/d♯.mp3"></audio>
-      <audio src="assets/audio/e.mp3"></audio>
-      <audio src="assets/audio/f.mp3"></audio>
-      <audio src="assets/audio/f♯.mp3"></audio>
-      <audio src="assets/audio/g.mp3"></audio>
-      <audio src="assets/audio/g♯.mp3"></audio>
+    <div>
+      <audio  class="audio"  src="#"></audio>
     </div>
     <button class="fullscreen openfullscreen"></button>
   </main>
